--- a/README
+++ b/README
@@ -1,3 +1,9 @@
 To compile run the bash file build.
 To see an example of how to run the program run the bash file qqvga.
 To find out how to use the program run it; it will display the usage.
+
+
+I have made some changes, dropped SDL.
+
+it does not work yet, even less than original
+
